Fix TrackDetailLayout overflow not working on Safari and layout name text leak (#63)
* Add mask-image as workaround to prevent overflow on Safari & change width configuration for layout item in selection
* Fix layout name text leaking on TrackDetailLayout component and force layout item to certain width

--- a/Pages/TrackDetailView/TrackDetailLayout.razor.css
+++ b/Pages/TrackDetailView/TrackDetailLayout.razor.css
@@ -26,6 +26,8 @@ p {
     border: 1px solid #1e2022;
     border-radius: 14px;
     overflow: hidden;
+    mask-image: radial-gradient(white, black);
+    -webkit-mask-image: -webkit-radial-gradient(white, black); /* prevent overflow on safari */
 }
 
 .layout-selection {
@@ -163,7 +165,8 @@ p {
 
     .layout-item, .layout-item-selected {
         margin-bottom: 0;
-        aspect-ratio: 1 / 1;
+        min-width: 110px;
+        max-width: 110px;
         padding-block: 4px;
         border-radius: 8px;
         height: 100%;
@@ -184,14 +187,15 @@ p {
 
     .layout-info {
         width: 100%;
-        height: 15vh;
-        padding-block: 0;
+        height: auto;
+        padding-top: 0;
+        padding-bottom: 24px;
         padding-inline: 16px;
         display: grid;
         grid-template-areas: "title title"
             "info1 info2";
         grid-template-columns: 40% 60%;
-        grid-template-rows: 35% 65%;
+        grid-template-rows: auto auto;
     }
 
     .info-group {
@@ -200,6 +204,7 @@ p {
 
     .layout-info > .info-group:first-child {
         grid-area: title;
+        padding-bottom: 12px;
     }
 
     .layout-info > .info-group:nth-child(2) {
